--- a/CodeBase/app/pubspec.yaml
+++ b/CodeBase/app/pubspec.yaml
@@ -26,10 +26,12 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
-dependencies:
-  flutter:
-    sdk: flutter
-
+dependencies: 
+  flutter: 
+    sdk: flutter 
+  introduction_screen: ^2.1.0 
+  shared_preferences : 2.0.6 
+  after_layout: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
