--- a/CodeBase/app/android/app/build.gradle
+++ b/CodeBase/app/android/app/build.gradle
@@ -26,6 +26,11 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+
+    defaultConfig {
+        minSdkVersion 20
+    }
+
     compileSdkVersion 30
 
     compileOptions {
