--- a/CodeBase/app/pubspec.yaml
+++ b/CodeBase/app/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   introduction_screen: ^2.1.0 
   shared_preferences : 2.0.6 
   after_layout: ^1.1.0
+  google_maps_flutter: 2.0.6
+  location: ^4.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
