--- a/CodeBase/app/pubspec.yaml
+++ b/CodeBase/app/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   after_layout: ^1.1.0
   google_maps_flutter: 2.0.6
   location: ^4.2.0
+  toggle_switch: ^1.2.0
+  font_awesome_flutter: ^9.1.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
