--- a/CodeBase/app/pubspec.yaml
+++ b/CodeBase/app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   location: ^4.2.0
   toggle_switch: ^1.2.0
   font_awesome_flutter: ^9.1.0
+  http: 0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
