--- a/CodeBase/app/android/app/src/main/AndroidManifest.xml
+++ b/CodeBase/app/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.app">
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="app"
         android:icon="@mipmap/ic_launcher">
