--- a/CodeBase/app/pubspec.yaml
+++ b/CodeBase/app/pubspec.yaml
@@ -33,10 +33,10 @@ dependencies:
   shared_preferences : 2.0.6 
   after_layout: ^1.1.0
   google_maps_flutter: 2.0.6
-  location: ^4.2.0
   toggle_switch: ^1.2.0
   font_awesome_flutter: ^9.1.0
   http: 0.13.3
+  geolocator: ^6.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
