--- a/CodeBase/app/pubspec.yaml
+++ b/CodeBase/app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   http: 0.13.3
   geolocator: ^6.1.7
+  geocoding: ^1.0.5
+
 
 
   # The following adds the Cupertino Icons font to your application.
