--- a/CodeBase/app/pubspec.yaml
+++ b/CodeBase/app/pubspec.yaml
@@ -50,6 +50,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.9.1 
+  flutter_native_splash: ^1.2.1
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/Logo.png
+  color_dark: "#1a1a1a"
+  image_dark: assets/Logo.png
+  android: true
+  ios: true
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
